--- a/EMD/appsettings.json
+++ b/EMD/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.4.198;database=EMD;Trusted_Connection=true;User Id=sa;Password=TigerSts@2017;Integrated security=false;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=118.68.170.128;database=EMD;Trusted_Connection=true;User Id=vanhong;Password=Hong@2019;Integrated security=false;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
