--- a/EMD/appsettings.json
+++ b/EMD/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=118.68.170.128;database=EMD;Trusted_Connection=true;User Id=vanhong;Password=Hong@2019;Integrated security=false;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=118.68.170.128;database=EMD;Trusted_Connection=true;User Id=vanhong;Password=Hong@2019;Integrated security=false;MultipleActiveResultSets=true",
+    "QLTaiKhoanConnection": "Server=118.68.170.128;database=qltaikhoan;Trusted_Connection=true;User Id=vanhong;Password=Hong@2019;Integrated security=false;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
